--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: clojure
 script:
   - lein2 test
+  - lein2 with-profile +1.3 test
+  - lein2 with-profile +1.4 test
   - lein2 with-profile +1.5 test
   - lein2 with-profile +1.6 test
   - lein2 with-profile +1.7 test
